API endpoints, logging, commission model, frontend JS updates, env example and migration

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Copy to .env and fill values
-FLASK_SECRET=your-flask-secret
+SECRET_KEY=your-flask-secret
 DATABASE_URL= # e.g. postgres://user:pass@host:5432/dbname (Supabase)
-MAIL_USERNAME=you@example.com
-MAIL_PASSWORD=your-mail-password
+SMTP_USER=you@example.com
+SMTP_PASS=your-mail-password
+ADMIN_EMAIL=admin@example.com
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
